[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Holomb",email = "wldmrgml@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
